# speech-transcription-service

./: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml
app/: audio.py  auth.py  config.py  errors.py  main.py  runtime.py  schemas.py
tests/: test_contract.py  test_runtime.py
