[project]
name = "transcription-service"
version = "0.1.0"
description = "Self-hosted FastAPI transcription service for Pending App voice capture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
inference = [
  "nemo_toolkit[asr]>=2.4.0",
  "torch>=2.4",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
